--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ a {
 
 .order-section {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .order-section-text {
@@ -106,6 +107,7 @@ a {
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    max-width: 496px;
 }
 
 .order-button {
@@ -118,6 +120,11 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 
 .order-button:hover,
