--- a/css/styles.css
+++ b/css/styles.css
@@ -134,12 +134,27 @@ a {
 
             /* OFFER-SECTION */
 
+.offer-section {
+    padding: 120px 0;
+}
+
+.offer-section-name {
+    visibility: hidden;
+}
+
+.offer-section-list {
+    display: flex;
+    gap: 24px;
+    width: calc((100%-72px)/4);
+}
+
 .offer-section-offers {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2; 
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .offer-section-desc {
@@ -152,6 +167,7 @@ a {
 
 .team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-section-name {
@@ -163,6 +179,14 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.team-section-list {
+    display: flex;
+    gap: 24px;
+    width: calc((100%-72px)/4);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .member-list-element {
@@ -175,6 +199,12 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.member-name-div {
+    padding: 32px 0;
 }
 
 .team-member-specification {
@@ -182,12 +212,23 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
             /* PORTFOLIO-SECTION */
 
+.portfolio-section {
+    padding: 120px 0;
+}
+
 .portfolio-section-img {
     background-color: #FFFFFF;
+}
+
+.portfolio-element-div {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-element-name {
@@ -196,6 +237,19 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 72px;
+    margin-bottom: 8px
+}
+
+.portfolio-section-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-list-element {
+    width: calc((100%-48px)/3);
 }
 
 .portfolio-element-type {
@@ -209,6 +263,7 @@ a {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-text {
@@ -216,6 +271,19 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 246px;
+}
+
+.logo-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-studio-footer {
