--- a/css/styles.css
+++ b/css/styles.css
@@ -138,13 +138,25 @@ a {
     padding: 120px 0;
 }
 
-.offer-section-name {
-    visibility: hidden;
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .offer-section-list {
     display: flex;
     gap: 24px;
+}
+
+.offer-list-element {
     width: calc((100%-72px)/4);
 }
 
@@ -203,7 +215,7 @@ a {
     margin-bottom: 8px;
 }
 
-.member-name-div {
+.member-div {
     padding: 32px 0;
 }
 
