--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ a {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 72px;
+    margin-bottom: 8px;
 }
 
 .portfolio-section-list {
