--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,12 @@ a {
     padding: 100px 0;
 }
 
+.footer-container {
+    max-width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
 .footer-text {
     color: #F4F4FD;
     font-size: 16px;
