--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,29 @@ a {
     color: inherit;
 }
 
-.logo {
+img {
+    display: block;
+}
+
+            /* HEADER */
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+    display: flex;
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+}
+
+.logo-header {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -21,10 +43,16 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 
 .logo-studio {
     color: #2e2f42;
+}
+
+.navigation-menu {
+    display: flex;
+    gap: 40px;
 }
 
 .navigation {
@@ -32,6 +60,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-weight: 500;
+    padding: 24px 0;
 }
 
 .navigation:focus,
@@ -41,6 +70,11 @@ a {
 
 .address {
     font-style: normal;
+}
+
+.feedback-menu {
+    display: flex;
+    gap: 40px;
 }
 
 .feedback {
@@ -54,6 +88,8 @@ a {
 .feedback:hover {
     color: #404bbf;
 }
+
+            /* ORDER-SECTION */
 
 .order-section {
     background-color: #2e2f42;
@@ -86,6 +122,8 @@ a {
     background-color: #404BBF;
 }
 
+            /* OFFER-SECTION */
+
 .offer-section-offers {
     color: #2E2F42;
     font-size: 20px;
@@ -99,6 +137,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
+            /* TEAM-SECTION */
 
 .team-section {
     background-color: #F4F4FD;
@@ -134,6 +174,8 @@ a {
     letter-spacing: 0.02em;
 }
 
+            /* PORTFOLIO-SECTION */
+
 .portfolio-section-img {
     background-color: #FFFFFF;
 }
@@ -153,6 +195,8 @@ a {
     letter-spacing: 0.02em;
 }
 
+            /* FOOTER */
+
 .footer {
     background-color: #2e2f42;
 }
@@ -162,6 +206,16 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+
+.logo-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
 }
 
 .logo-studio-footer {
