--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ img {
     display: block;
 }
 
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
             /* HEADER */
 
 .header {
@@ -25,9 +31,7 @@ img {
 
 .header-container {
     display: flex;
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+    align-items: center;
 }
 
 .nav {
@@ -60,6 +64,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-weight: 500;
+    display: block;
     padding: 24px 0;
 }
 
