--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@ body {
     background-color: #FFFFFF;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 ul, ol {
     list-style: none;
 }
@@ -18,9 +23,11 @@ img {
 }
 
 .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
             /* HEADER */
@@ -29,8 +36,9 @@ img {
     border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
+.container.header-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -98,6 +106,13 @@ img {
 
 .order-section {
     background-color: #2e2f42;
+    padding: 188px 0;
+}
+
+.container.order-container {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
 }
 
 .order-section-text {
@@ -108,6 +123,7 @@ img {
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    max-width: 496px;
 }
 
 .order-button {
@@ -120,6 +136,12 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    margin-left:auto;
+    margin-right:auto;
+    height: 56px;
+    border: none;
 }
 
 .order-button:hover,
@@ -129,12 +151,42 @@ img {
 
             /* OFFER-SECTION */
 
+.offer-section {
+    padding: 120px 0;
+}
+
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
+.container.offer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.offer-list {
+    display: flex;
+    gap: 24px;
+}
+
+.offer-list-point {
+    width: calc((100% - 72px) / 4);
+}
+
 .offer-section-offers {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.2; 
+    line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .offer-section-desc {
