--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ body {
 
 ul, ol {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -110,9 +112,7 @@ img {
 }
 
 .container.order-container {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+    align-items: center;
 }
 
 .order-section-text {
@@ -124,6 +124,8 @@ img {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
+    margin: 0 auto;
+    padding-bottom: 48px;
 }
 
 .order-button {
@@ -142,6 +144,7 @@ img {
     margin-right:auto;
     height: 56px;
     border: none;
+    border-radius: 4px;
 }
 
 .order-button:hover,
@@ -156,13 +159,16 @@ img {
 }
 
 .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
     position: absolute;
-    white-space: nowrap;
     width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .container.offer-container {
@@ -199,6 +205,12 @@ img {
 
 .team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
+}
+
+.container.team-container {
+    justify-content: space-between;
+    align-items: center;
 }
 
 .team-section-name {
@@ -210,10 +222,23 @@ img {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.member-list {
+    display: flex;
+    gap: 24px;
 }
 
 .member-list-element {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.member-name-spec {
+    padding: 32px 0;
+    margin: 0 auto;
 }
 
 .team-member-name {
@@ -222,6 +247,8 @@ img {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .team-member-specification {
@@ -229,12 +256,55 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
             /* PORTFOLIO-SECTION */
 
+.portfolio-section {
+    padding: 120px 0;
+}
+
+.container.portfolio-container {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.portfolio-section-name {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-list-element {
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+    margin: 0 auto;
+}
+
 .portfolio-section-img {
     background-color: #FFFFFF;
+}
+
+.portfolio-name-type {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none; 
+    margin-bottom: 8px; 
 }
 
 .portfolio-element-name {
@@ -256,6 +326,13 @@ img {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
+}
+
+.container.footer-container {
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 156px;
 }
 
 .footer-text {
@@ -263,6 +340,7 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
 
 .logo-footer {
@@ -273,6 +351,8 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-studio-footer {
